# PA193

./: Cargo.toml  README.md  inpfile  input  output  testvectors.txt
.github/workflows/: rust.yml
src/: lib.rs  main.rs  ui.rs  validbech32m.json
