[package]
name = "bech32m"
version = "1.0.0"
edition = "2021"
description = "base32m encoding and decoding tool"
license = "GNU GPL v.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde_json = "1.0.79"
base64 = "0.13.0" # Sorry we had to.
